--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Fri and Solo tie the knot.">
+<meta name="description" content="Fei and Solo tie the knot.">
 <meta name="robots" content="noindex, nofollow">
 <meta name="theme-color" content="#ffffff">
-<title>Bec and Scott tie the knot</title>
+<title>Fei and Solo tie the knot</title>
 <link rel="stylesheet" href="bulma.css">
 <link rel="stylesheet" href="slider.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
